# Web_HW13_Django

./: README.md  pyproject.toml
project_quotes/project_quotes/: asgi.py  settings.py  wsgi.py
project_quotes/quotes/: forms.py  models.py  urls.py  utils.py  views.py
project_quotes/quotes/migrations/: 0001_initial.py
project_quotes/quotes/static/quotes/: style.css
project_quotes/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  base.html  base_with_if.html  index.html  show_author.html  viewing_tag.html
project_quotes/quotes/templatetags/: extract.py
project_quotes/users/: urls.py  views.py
project_quotes/users/templates/users/: password_reset_email.html  password_reset_subject.txt
project_quotes/utils/: authors.json  custom_migration.py
